gateway/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafe
  namespace: ocha-gateway-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafe
  template:
    metadata:
      labels:
        app: cafe
    spec:
      containers:
        - name: cafe
          image: nrt.ocir.io/orasejapan/ocha-traffic-routing
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cafe
  namespace: ocha-gateway-demo
spec:
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: cafe
